a teeny bit of test content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </head>
 
     <body>
+        <p>Hello! there's not much see, unfortunately. That's no what this page is really for...</p>
+
           <script src="js/scripts.js"></script>
     </body>
 </html>
