a picture, to test adding extra content

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </head>
 
     <body>
-        <p>Hello! there's not much see, unfortunately. That's no what this page is really for...</p>
-
+        <p>Hello! there's not much see, unfortunately. That's not what this page is really for...</p>
+        <p> In the interests of always striving to do something awesome, here is a picture of a rather nice galaxy (NGC5457)</p>
+        <img src="NGC5457.jpg" width= 600>
           <script src="js/scripts.js"></script>
     </body>
 </html>
