--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <p>Hello! there's not much see, unfortunately. That's not what this page is really for...</p>
-        <p> In the interests of always striving to do something awesome, here is a picture of a rather nice galaxy (NGC5457)</p>
+        <p> In the interests of always striving to do something awesome, here is a picture of a rather nice galaxy (NGC5457)...</p>
         <img src="NGC5457.jpg" width= 600>
           <script src="js/scripts.js"></script>
     </body>
